--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,8 @@
 {
   "extends": [
     "github>AmpelProject/renovate-config",
-    "github>AmpelProject/renovate-config//regexManagers/githubActionsVersions"
+    "github>AmpelProject/renovate-config//regexManagers/githubActionsVersions",
+    "github>AmpelProject/renovate-config//regexManagers/dockerfileVersions",
+    "github>AmpelProject/renovate-config//regexManagers/precommitVersions"
   ]
 }
