--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,12 +31,11 @@ fastapi = {version = "^0.115.0", optional = true}
 pydantic = {version = "^2", optional = true}
 PyJWT = {version = "^2.1.0", extras = ["server"]}
 boto3 = "^1.19.2"
-fastavro = "^1.9.2"
+fastavro = {version = "^1.9.2", extras = ["zstandard"]}
 astropy-healpix = "^1.0.0"
 pydantic-settings = {version = "^2.5.2", optional = true}
 uvicorn = {version = "^0.32.0", optional = true}
 sqlmodel = "^0.0.27"
-"backports.zstd" = {version = "*", python = "<3.14"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
