--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ astropy-healpix = "^1.0.0"
 pydantic-settings = {version = "^2.5.2", optional = true}
 uvicorn = {version = "^0.32.0", optional = true}
 sqlmodel = "^0.0.27"
+typer = "^0.19.2"
+confluent-kafka = {version = "^2.12.0", extras = ["avro", "schemaregistry"]}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
