--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,14 +27,14 @@ packages = [
 python = "^3.12"
 sqlalchemy = "~2.0.0"
 psycopg2 = "^2.8.6"
-fastapi = {version = "^0.115.0", optional = true}
-pydantic = {version = "^2", optional = true}
+fastapi = {version = "^0.115.0"}
+pydantic = {version = "^2"}
 PyJWT = {version = "^2.1.0", extras = ["server"]}
 boto3 = "^1.19.2"
 fastavro = {version = "^1.9.2", extras = ["zstandard"]}
 astropy-healpix = "^1.0.0"
-pydantic-settings = {version = "^2.5.2", optional = true}
-uvicorn = {version = "^0.32.0", optional = true}
+pydantic-settings = {version = "^2.5.2"}
+uvicorn = {version = "^0.32.0"}
 sqlmodel = "^0.0.27"
 typer = "^0.19.2"
 confluent-kafka = {version = "^2.12.0", extras = ["avro", "schemaregistry"]}
@@ -50,9 +50,10 @@ pytest-mock = "^3.14.0"
 pytest-asyncio = "^0.24.0"
 moto = "^5.0.20"
 boto3-stubs = {extras = ["s3"], version = "^1.35.57"}
+types-confluent-kafka = {version = "~1", markers = "python_version < '3.14'"}
 
-[tool.poetry.extras]
-server = ["fastapi", "pydantic-settings", "pydantic", "uvicorn"]
+[tool.poetry.scripts]
+update-lsst-archive = 'ampel.lsst.archive.updater:run'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
