--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,7 +89,10 @@ ignore_missing_imports = true
 
 [tool.ruff]
 target-version = "py312"
-exclude = [ "ampel/lsst/archive/server/tokens.py" ]
+exclude = [
+    "ampel/lsst/archive/server/tokens.py",
+    "tests/test_server.py",
+]
 
 [tool.ruff.lint]
 select = [
