--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ boto3-stubs = {extras = ["s3"], version = "^1.35.57"}
 types-confluent-kafka = {version = "~1", markers = "python_version < '3.14'"}
 
 [tool.poetry.scripts]
-update-lsst-archive = 'ampel.lsst.archive.updater:run'
+update-lsst-archive = 'ampel.lsst.archive.update:run'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
