--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ types-confluent-kafka = {version = "~1", markers = "python_version < '3.14'"}
 
 [tool.poetry.scripts]
 update-lsst-archive = 'ampel.lsst.archive.update:run'
+init-lsst-archive = 'ampel.lsst.archive.init:main'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
