--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -39,11 +39,7 @@ jobs:
       id-token: write
 
     steps:
-    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@49b3bc8e6bdd4a60e6116a5414239cba5943d3cf # v3
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@c47758b77c9736f4b2ef4073d4d51994fabfe349 # v3
+    - uses: docker/setup-buildx-action@v3
     - name: Login to Github Packages
       uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3
       with:
@@ -54,6 +50,9 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75 # v6
       with:
+        platforms: linux/amd64
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
         load: true
     - name: Smoke test
       run: |
