--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,10 @@ typer = "^0.19.2"
 confluent-kafka = {version = "^2.12.0", extras = ["avro", "schemaregistry"]}
 orjson = "^3.11.3"
 zstd-asgi = "^1.0"
+matplotlib = {version = "^3.10.7", optional = true}
+
+[tool.poetry.extras]
+image = ["matplotlib"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
