--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,9 +41,10 @@ confluent-kafka = {version = "^2.12.0", extras = ["avro", "schemaregistry"]}
 orjson = "^3.11.3"
 zstd-asgi = "^1.0"
 matplotlib = {version = "^3.10.7", optional = true}
+scipy = {version = "^1.16.2", optional = true}
 
 [tool.poetry.extras]
-image = ["matplotlib"]
+image = ["matplotlib", "scipy"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
