--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,11 +26,9 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.12"
 sqlalchemy = "~2.0.0"
-psycopg2 = "^2.8.6"
 fastapi = {version = "^0.115.0"}
 pydantic = {version = "^2"}
 PyJWT = {version = "^2.1.0", extras = ["server"]}
-boto3 = "^1.19.2"
 fastavro = {version = "^1.9.2", extras = ["zstandard"]}
 astropy-healpix = "^1.0.0"
 pydantic-settings = {version = "^2.5.2"}
@@ -42,6 +40,9 @@ orjson = "^3.11.3"
 zstd-asgi = "^1.0"
 matplotlib = {version = "^3.10.7", optional = true}
 scipy = {version = "^1.16.2", optional = true}
+aioboto3 = "^15.4.0"
+asyncpg = "^0.30.0"
+async-lru = "^2.0.5"
 
 [tool.poetry.extras]
 image = ["matplotlib", "scipy"]
@@ -56,9 +57,10 @@ httpx = "^0.27.2"
 pytest-mock = "^3.14.0"
 pytest-asyncio = "^0.24.0"
 moto = "^5.0.20"
-boto3-stubs = {extras = ["s3"], version = "^1.35.57"}
 types-confluent-kafka = {version = "~1", markers = "python_version < '3.14'"}
 scipy-stubs = "^1.16.2.4"
+types-aioboto3 = {version = "^15.4.0", extras = ["s3"]}
+asyncpg-stubs = "^0.30.2"
 
 [tool.poetry.scripts]
 update-lsst-archive = 'ampel.lsst.archive.update:run'
