--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ scipy = {version = "^1.16.2", optional = true}
 aioboto3 = "^15.4.0"
 asyncpg = "^0.30.0"
 async-lru = "^2.0.5"
+colorspacious = "^1.1.2"
 
 [tool.poetry.extras]
 image = ["matplotlib", "scipy"]
