--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ aioboto3 = "^15.4.0"
 asyncpg = "^0.30.0"
 async-lru = "^2.0.5"
 colorspacious = "^1.1.2"
+prometheus-async = "^25.1.0"
+prometheus-fastapi-instrumentator = "^7.1.0"
 
 [tool.poetry.extras]
 image = ["matplotlib", "scipy"]
