--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ async-lru = "^2.0.5"
 colorspacious = "^1.1.2"
 prometheus-async = "^25.1.0"
 prometheus-fastapi-instrumentator = "^7.1.0"
+plotly = "^6.3.1"
 
 [tool.poetry.extras]
 image = ["matplotlib", "scipy"]
