--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -1,13 +1,15 @@
 name: CD
 on:
   push:
+    paths:
+      - 'frontend/**'
     branches:
       - main
     tags:
         - 'v*'
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ${{ github.repository }}-frontend
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -26,6 +28,7 @@ jobs:
         run: npm ci
       - name: Build application
         run: npm run build
+        working-directory: ./frontend
         env:
           PUBLIC_URL: /lsst
           REACT_APP_API_BASE: /api/lsst/archive/v1
@@ -46,7 +49,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
-          push: true
+          context: ./frontend
+          push: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
