--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,11 @@ name: ci
 
 on:
   push:
+    paths:
+      - pyproject.toml
+      - poetry.lock
+      - ampel/**
+      - tests/**
     branches:
       - main
       - renovate/*
@@ -13,6 +18,11 @@ on:
       - main
       - dev/*
       - stable/*
+    paths:
+      - pyproject.toml
+      - poetry.lock
+      - ampel/**
+      - tests/**
 
 jobs:
   ci:
