--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -26,6 +26,7 @@ jobs:
           cache: npm
       - name: Install dependencies
         run: npm ci
+        working-directory: ./frontend
       - name: Build application
         run: npm run build
         working-directory: ./frontend
