--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -3,6 +3,7 @@ on:
   push:
     paths:
       - 'frontend/**'
+      - '.github/workflows/frontend.yaml'
     branches:
       - main
     tags:
@@ -23,7 +24,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "24"
-          cache: npm
       - name: Install dependencies
         run: npm ci
         working-directory: ./frontend
