--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ colorspacious = "^1.1.2"
 prometheus-async = "^25.1.0"
 prometheus-fastapi-instrumentator = "^7.1.0"
 plotly = "^6.3.1"
+pandas = "^2.3.3"
 
 [tool.poetry.extras]
 image = ["matplotlib", "scipy"]
