--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1",
+    "react-tabulator": "^0.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
