--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,15 +25,12 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.12"
-sqlalchemy = "~2.0.0"
 fastapi = {version = "^0.115.0"}
 pydantic = {version = "^2"}
 PyJWT = {version = "^2.1.0", extras = ["server"]}
 astropy-healpix = "^1.0.0"
 pydantic-settings = {version = "^2.5.2"}
 uvicorn = {version = "^0.32.0"}
-sqlmodel = "^0.0.27"
-typer = "^0.19.2"
 orjson = "^3.11.3"
 zstd-asgi = "^1.0"
 scipy = {version = "^1.16.2", optional = true}
@@ -47,9 +44,11 @@ duckdb = "^1.4.2"
 pyarrow = "^22.0.0"
 hishel = "^1.1.6"
 httpx = "^0.27.2"
+pyiceberg = {version = "^0.11.0", optional = true}
 
 [tool.poetry.extras]
 image = ["scipy"]
+pyiceberg = ["pyiceberg"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
