--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,14 +4,20 @@
 repos:
 - repo: https://github.com/astral-sh/ruff-pre-commit
   # renovate: datasource=pypi depName=ruff versioning=pep440
-  rev: v0.13.0
+  rev: v0.14.8
   hooks:
     - id: ruff
       args: [--fix]
     - id: ruff-format
 - repo: https://github.com/python-poetry/poetry
   # renovate: datasource=pypi depName=poetry versioning=pep440
-  rev: "1.8.5"
+  rev: "2.2.1"
   hooks: 
     - id: poetry-check
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.3.0
+  hooks:
+      # Prevent committing inline conflict markers
+      - id: check-merge-conflict
+        args: [--assume-in-merge]
 fail_fast: false
