--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,8 @@ dependencies = [
     "hishel (>=1.1.9,<2.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
     "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
-    "duckdb (>=1.4.4,<2.0.0)"
+    "duckdb (>=1.4.4,<2.0.0)",
+    "orjson (>=3.11.7,<4.0.0)"
 ]
 
 [project.optional-dependencies]
@@ -46,6 +47,8 @@ dev = [
     "mypy (>=1.13,<2.0)",
     "scipy-stubs (>=1.17.0.2,<2.0.0.0)",
     "pyarrow-stubs (>=20.0.0.20251215,<21.0.0.0)",
+    "testcontainers (>=4.14.1,<5.0.0)",
+    "pytest-asyncio (>=1.3.0,<2.0.0)",
 ]
 
 [tool.poetry]
@@ -103,7 +106,6 @@ target-version = "py312"
 exclude = [
     "ampel/lsst/archive/server/tokens.py",
     "ampel/lsst/archive/server/streams.py",
-    "tests/test_server.py",
 ]
 
 [tool.ruff.lint]
@@ -134,6 +136,7 @@ ignore = [
     "RUF018",  # assignment in assert is just fine in tests
     "SLF001",  # allow private member access
     "T201",    # allow print()
+    "PLR2004", # magic numbers are fine in tests
 ]
 
 [tool.ruff.lint.flake8-unused-arguments]
