Make iceberg dirs world-writable
Real Docker (not desktop) uses container user ids for bind mounts,
so iceberg user (1000) can't write to directories owned by runner
user (1001)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
   ci:
     uses: AmpelProject/Ampel-interface/.github/workflows/ci.yml@c855e93ae95c955ba292f88413455462398a8c9a # ci-py12-v10
     with:
-      mongo: true
+      mongo: false
       format: true
       lint: true
       # renovate: datasource=python-version depName=python
